PIofSF/force-app/main/default/objects/Unit__c/fields/Challenge_Type__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Type__c</fullName>
    <label>Challenge Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Questions</fullName>
                <default>true</default>
                <label>Questions</label>
            </value>
            <value>
                <fullName>Playground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>