PIofSF/force-app/main/default/objects/Unit__c/fields/Times_Estimate_X_Unit__c.field-meta.xml
<CustomField>
    <fullName>Times_Estimate_X_Unit__c</fullName>
    <label>Times Estimate X Unit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>