PIofSF/force-app/main/default/objects/Unit__c/listViews/li.listView-meta.xml
<ListView>
    <fullName>li</fullName>
    <columns>NAME</columns>
    <columns>Module__c</columns>
    <columns>Points_X_Unit__c</columns>
    <columns>Times_Estimate_X_Unit__c</columns>
    <columns>Challenge_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>li</label>
</ListView>